# rabbitmq-management

./: .pre-commit-config.yaml  .readthedocs.yaml  .unasyncd.toml  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: publish.yml  testing.yml
docs/: index.md  quickstart.md
docs/api/: auth.md  bindings.md  channels.md  connections.md  consumers.md  definitions.md  exchanges.md  health.md  management.md  nodes.md  overview.md  parameters.md  permissions.md  policies.md  queues.md  users.md  vhosts.md
docs/stylesheets/: extra.css
src/rabbitmq_management/: __init__.py  _exceptions.py  exceptions.py
src/rabbitmq_management/_http_clients/: __init__.py  aio_client.py  client.py
src/rabbitmq_management/_paths/: __init__.py  auth.py  bindings.py  connections.py  const.py  exchanges.py  health.py  parameters.py  paths.py  policies.py  queues.py  stream.py  users.py  vhosts.py
src/rabbitmq_management/http_clients/: __init__.py  async_client.py  client.py
src/rabbitmq_management/management_api/: __init__.py
src/rabbitmq_management/management_api/_async/: auth_api.py  base_api.py  bindings_api.py  channels_api.py  connections_api.py  consumers_api.py  definitions_api.py  exchanges_api.py  health_api.py  management_api.py  nodes_api.py  parameters_api.py  permissions_api.py  policies_api.py  queues_api.py  users_api.py  vhosts_api.py
src/rabbitmq_management/management_api/_sync/: auth_api.py  base_api.py  bindings_api.py  channels_api.py  connections_api.py  consumers_api.py  definitions_api.py  exchanges_api.py  health_api.py  management_api.py  nodes_api.py  parameters_api.py  permissions_api.py  policies_api.py  queues_api.py  users_api.py  vhosts_api.py
src/rabbitmq_management/paths/: __init__.py  auth.py  bindings.py  channels.py  connections.py  const.py  consumers.py  definitions.py  exchanges.py  federation.py  health.py  nodes.py  parameters.py  permissions.py  policies.py  queues.py  stream.py  users.py  utils.py  vhosts.py
tests/: conftest.py
tests/unit/http_clients/: test_aio_client.py  test_async_client.py  test_client.py
tests/unit/management_api/: test_async_auth_api.py  test_async_bindings_api.py  test_async_channels_api.py  test_async_connections_api.py  test_async_consumers_api.py  test_async_definitions_api.py  test_async_exchanges_api.py  test_async_health_api.py  test_async_management_api.py  test_async_nodes_api.py  test_async_parameters_api.py  test_async_permissions_api.py  test_async_policies_api.py  test_async_queues_api.py  test_async_users_api.py  test_async_vhosts_api.py  test_auth_api.py  test_bindings_api.py  test_channels_api.py  test_connections_api.py  test_consumers_api.py  test_definitions_api.py  test_exchanges_api.py  test_health_api.py  test_management_api.py  test_nodes_api.py  test_parameters_api.py  test_permissions_api.py  test_policies_api.py  test_queues_api.py  test_users_api.py  test_vhosts_api.py
tests/unit/paths/: test_auth.py  test_bindings.py  test_channels.py  test_connections.py  test_consumers.py  test_definitions.py  test_exchanges.py  test_federation.py  test_health.py  test_nodes.py  test_parameters.py  test_paths.py  test_permissions.py  test_policies.py  test_queues.py  test_stream.py  test_users.py  test_vhosts.py
