[project]
name = "rabbitmq-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rivkat Karimov", email = "redscorpion32.rk@gmail.com" }
]

requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "ruff>=0.15.7",
]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "unasyncd>=0.9.0",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
# Указываем тестовую директорию
# testpaths = ["tests"]

addopts = [
    "--cov=rabbitmq_management",
    # "--cov-report=term-missing",
    # "--cov-report=html",
    # "--cov-report=markdown",
]
[tool.unasyncd]
force_regen = true
ruff_fix = true
ruff_format = true

[tool.unasyncd.files]
"src/rabbitmq_management/http_clients/async_client.py" = "src/rabbitmq_management/http_clients/client.py"
"src/rabbitmq_management/management_api/async_management_api.py" = "src/rabbitmq_management/management_api/management_api.py"
"tests/unit/http_clients/test_async_client.py" = "tests/unit/http_clients/test_client.py"
"tests/unit/management_api/test_async_management_api.py" = "tests/unit/management_api/test_management_api.py"

[tool.unasyncd.add_replacements]
"AsyncClient" = "Client"
"AsyncHTTPClient" = "HTTPClient"
"AsyncRMQManagementAPI" = "RMQManagementAPI"
"aclose" = "close"
"async_http_client" = "http_client"
"async_management_api" = "management_api"
