[project]
name = "rabbitmq-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rivkat Karimov", email = "redscorpion32.rk@gmail.com" }
]

requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "ruff>=0.15.7",
]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "unasyncd>=0.9.0",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"

addopts = [
    # "--cov=rabbitmq_management",
    # "--cov-report=term-missing",
    # "--cov-report=html",
    # "--cov-report=markdown",
]
