[project]
name = "rabbitmq-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rivkat Karimov", email = "redscorpion32.rk@gmail.com" }
]

requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "ruff>=0.15.7",
]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "unasyncd>=0.9.0",
]

[tool.ruff]
target-version = "py39"

lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "ERA", # eradicate
    "RUF", # Ruff-specific rules
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/rabbitmq_management/http_clients/**" = ["ANN401"]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"

addopts = [
    # "--cov=rabbitmq_management",
    # "--cov-report=term-missing",
    # "--cov-report=html",
    # "--cov-report=markdown",
]
